# mydgms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: TODO.md
src/mydgms/: generative.py  generativemodel.py  neuralnet.py  training.py
tests/: test_generative.py  test_generativemodel.py  test_neuralnet.py  test_training.py
work/00_MNIST/: train_mnist.py
work/01_wine/: train_wine.py
work/02_Softmaxの勾配/: softmaxの勾配.py
