[project]
name = "mydgms"
version = "0.1.0"
description = "My Deep Generative Models."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "tqdm",
  "scikit-learn",
  "matplotlib",
  "pytest",
  "pytest-xdist"
]

[project.optional-dependencies]
dev = ["jupyter", "black[jupyter]"]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.
